Created login pages

--- a/templates/labLogin.html
+++ b/templates/labLogin.html
@@ -19,12 +19,12 @@
 
 <body>
     <div style="height:90px" class="redBox">
-        <h1 style="height:17px"> Employee Login </h1>
+        <h1 style="height:17px"> Lab Login </h1>
         <a href="http://localhost:3000/"> Return to Home </a>
     </div>
     <br><br>
-    <form action="/results">
-        Email: <br>
+    <form action="/labhome">
+        Lab ID: <br>
         <input class="text" type="text"> </input> <br>
         Password: <br>
         <input class="text" type="text"> <br>
