--- a/templates/index.html
+++ b/templates/index.html
@@ -2,16 +2,14 @@
 <head>
     <title> COVID Testing </title>
     <style>
-        body {
-            background-color: rgb(245, 172, 164);
-        }
         .redBox {
-            background-color: rgb(199, 0, 0);
+            background-color: rgb(210, 0, 0);
             text-align: center;
             padding: 1px;
             border: 2px solid black;
         }
         .button {
+            background-color: azure;
             margin: auto;
             width: 80%;
         }
