Added login functionality

--- a/templates/employeeLogin.html
+++ b/templates/employeeLogin.html
@@ -25,10 +25,10 @@
     <br><br>
     <form action="/results">
         Email: <br>
-        <input class="text" type="text"> </input> <br>
+        <input class="text" type="text" name="email"> </input> <br>
         Password: <br>
-        <input class="text" type="text"> <br>
-        <input type="submit"> 
+        <input class="text" type="text" name="password"> <br>
+        <input type="submit" value="Login"> 
     </form>
 </body>
 </html>
