--- a/templates/index.html
+++ b/templates/index.html
@@ -22,12 +22,16 @@
         <h2> By: Isaac Jon</h2>
     </div>
     <br><br><br>
-    <div class="redBox button">
-        <a href="/employee"><h1> Employee Login </h1> </a>
-    </div>
+    <a href="/employee"> 
+        <div class="redBox button">
+            <h1> Employee Login </h1>
+        </div>
+    </a>
     <br><br>
-    <div class="redBox button">
-        <a href="/lablogin"> <h1> Lab Login </h1> </a>
-    </div>
+    <a href="/lablogin">
+        <div class="redBox button">
+            <h1> Lab Login </h1> 
+        </div>
+    </a>
 </body>
 </html>
