--- a/templates/labLogin.html
+++ b/templates/labLogin.html
@@ -25,10 +25,10 @@
     <br><br>
     <form action="/labhome">
         Lab ID: <br>
-        <input class="text" type="text"> </input> <br>
+        <input class="text" type="text" name="id"> </input> <br>
         Password: <br>
-        <input class="text" type="text"> <br>
-        <input type="submit"> 
+        <input class="text" type="text" name="password"> <br>
+        <input type="submit" value="Login">
     </form>
 </body>
 </html>
