Keep track of the current user that is logged in

--- a/templates/testCollection.html
+++ b/templates/testCollection.html
@@ -19,16 +19,16 @@
 
 <body>
     <div style="height:90px" class="redBox">
-        <h1 style="height:17px"> Employee Login </h1>
+        <h1 style="height:17px"> Test Collection </h1>
         <a href="/"> Return to Home </a>
     </div>
     <br><br>
-    <form action="/results">
-        Email: <br>
-        <input class="text" type="text" name="email"> </input> <br>
-        Password: <br>
-        <input class="text" type="text" name="password"> <br>
-        <input type="submit" value="Login"> 
+    <form action="/test">
+        Employee ID:
+        <input class="text" type="text" name="id"> </input> <br><br>
+        Test Barcode:
+        <input class="text" type="text" name="barcode"> <br><br>
+        <input type="submit" value="Add">
     </form>
 </body>
 </html>
