--- a/templates/labLogin.html
+++ b/templates/labLogin.html
@@ -20,7 +20,7 @@
 <body>
     <div style="height:90px" class="redBox">
         <h1 style="height:17px"> Lab Login </h1>
-        <a href="http://localhost:3000/"> Return to Home </a>
+        <a href="/"> Return to Home </a>
     </div>
     <br><br>
     <form action="/labhome">
