Shows table of tests in test collection page

--- a/templates/employeeLogin.html
+++ b/templates/employeeLogin.html
@@ -11,7 +11,7 @@
         form {
             text-align: center;
         }
-        input.text {
+        .text {
             width: 200px;
         }
     </style>
@@ -27,7 +27,7 @@
         Email: <br>
         <input class="text" type="text" name="email"> </input> <br>
         Password: <br>
-        <input class="text" type="text" name="password"> <br>
+        <input class="text" type="password" name="password"> <br>
         <input type="submit" value="Login"> 
     </form>
 </body>
