Pool Mapping functional

--- a/templates/poolMapping.html
+++ b/templates/poolMapping.html
@@ -22,6 +22,8 @@
         <h1 style="height:17px"> Pool Mapping </h1>
         <a href="/"> Return to Home </a>
     </div>
-    <h2 style="text-align:center"> Current Courses </h2>
+    <br><br>
     <form action="/pool">
+        <input type="text" id="addPoolBcode" name="addPoolBcode"> <label for="addPoolBcode">Add Pool</label> <br>
+    <h2 style="text-align:center"> Current Tests </h2>
         <ul>
