--- a/templates/poolMapping.html
+++ b/templates/poolMapping.html
@@ -24,6 +24,6 @@
     </div>
     <br><br>
     <form action="/pool">
-        <input type="text" id="addPoolBcode" name="addPoolBcode"> <label for="addPoolBcode">Add Pool</label> <br>
+        <label for="addPoolBcode">Pool Barcode:</label> <input type="text" id="addPoolBcode" name="addPoolBcode"> <br>
     <h2 style="text-align:center"> Current Tests </h2>
         <ul>
